topnav bottomnav and footer completed

--- a/src/components/header/scss/components/c-index.scss
+++ b/src/components/header/scss/components/c-index.scss
@@ -1,6 +1,8 @@
 @import 'menu-button.scss';
+@import 'theme-button.scss';
 @import 'general-icons.scss';
 @import 'language.scss';
 @import 'mobile-menu.scss';
-@import 'category-links.scss';
+@import 'category-mobile.scss';
 @import 'page-links.scss';
+@import 'category-nav.scss';
