--- a/src/components/header/scss/components/mobile-menu.scss
+++ b/src/components/header/scss/components/mobile-menu.scss
@@ -6,10 +6,21 @@
     min-height: 100vh;
     background-color: var(--black-7);
     z-index: 98;
-    transform: translateX(-1000px);
     opacity: 0;
+    
+    display: none;
+    animation: menu-backdrop 0.3s ease forwards;
     &.active{
+        display: block;
         transform: translateX(0);
+        opacity: 1;
+    }
+}
+@keyframes menu-backdrop{
+    0%{
+        opacity: 0;
+    }
+    100%{
         opacity: 1;
     }
 }
@@ -21,9 +32,10 @@
     max-width: 450px;
     min-height: 100vh;
     z-index: 99;
-    transform: translateX(-1000px);
+    transform: translateX(-4000px);
     opacity: 0;
     background-color: var(--bg-general-theme-color);
+    transition: all 0.6s;
     
     @include column-justify-start;
     &.active{
@@ -81,6 +93,19 @@
     .menu-body{
         width: 100%;
         @include column-center;
+    }
+    .menu-footer{
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        @include row-between;
+        padding: 15px 10px;
+        box-shadow: 0 0 5px var(--black-4);
+        .masters-link{
+            img{
+                max-width: 100px;
+            }
+        }
     }
 }
 
