--- a/src/scss/root.scss
+++ b/src/scss/root.scss
@@ -63,7 +63,7 @@
     --scrollbar-thumb-color: var(--color-1);
     --scrollbar-track-color: #fff;
 
-    --selection-bg: #3c3c3c;
+    --selection-bg: var(--color-1);
     --selection-color: #fff;
 
     --section-padding: 40px 0;
