--- a/src/components/header/scss/components/general-icons.scss
+++ b/src/components/header/scss/components/general-icons.scss
@@ -1,25 +1,40 @@
-.general-icons{
+.general-icons {
     @include row-center;
-    .item{
+
+    .item {
         @include row-center;
         font-size: 20px;
         color: #D8232A;
         padding: 3px 7px;
-        border-right: 1px solid var(--black-1);
-        &:last-child{
+        border-right: 1px solid var(--general-icon-border);
+        margin-right: 1px;
+
+        &.login {
+            color: var(--text-general-theme-color);
+            text-transform: capitalize;
+            font-size: 16px;
+            font-weight: 600;
+            img{
+                margin-right: 10px;
+            }
+        }
+
+        &:last-child {
             border-right: 0;
             padding-right: 0;
+            margin-right: 0;
         }
-        img{
+
+        img {
             max-width: 20px;
             max-height: 20px;
         }
     }
 }
 
-@media only screen and (min-width: 576px){
-    .general-icons{
-        .item{
+@media only screen and (min-width: 576px) {
+    .general-icons {
+        .item {
             padding: 5px 12px;
             transform: scale(1.1);
         }
