--- a/src/scss/animation.scss
+++ b/src/scss/animation.scss
@@ -13,9 +13,15 @@
     80% {box-shadow: 0 0 0 10px rgba(255, 134, 134, 0);}
     100% {box-shadow: 0 0 0 0 rgba(255, 134, 134, 0);}
 }
-@keyframes show-fix-header{
-    0%{transform: translateY(-500px);}
-    100%{transform: translateY(0);}
+@keyframes fixed-nav{
+    0%{
+        transform: translateY(-500px);
+        opacity: 0;
+    }
+    100%{
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
 @keyframes spin-line{
     100%{transform: rotate(360deg);}
@@ -41,11 +47,8 @@
     100%{opacity: 1;transform: translateY(0);}
 }
 @keyframes usta-logo-animation{
-    0%{transform: rotate(0);}
-    25%{transform: rotate(8deg);}
-    50%{transform: rotate(0);}
-    75%{transform: rotate(-8deg);}
-    100%{transform: rotate(0);}
+    0%{transform: rotate(3deg);}
+    100%{transform: rotate(-3deg);}
 }
 @keyframes alt-category-panel{
     0%{opacity: 0;transform: translateY(-50px);}
