--- a/src/scss/basic.scss
+++ b/src/scss/basic.scss
@@ -16,6 +16,7 @@ body {
         .app{
             width: 100%;
             min-height: 100vh;
+            @include column-between;
         }
     }
 }
@@ -68,17 +69,11 @@ button {
     box-shadow: none;
     padding: 0;
     margin: 0;
+    transition: all 0.2s;
 }
 
-a,
-button,
-div,
-span,
-p,
-img,
-i,
-label {
-    transition: 0.2s;
+a{
+    transition: all 0.2s;
     -o-transition: 0.2s;
     -moz-transition: 0.2s;
     -webkit-transition: 0.2s;
@@ -86,6 +81,7 @@ label {
 
 main {
     width: 100%;
+    min-height: 2000px;
 }
 
 section {
@@ -107,5 +103,21 @@ section {
     }
 }
 
-
-
+.social-icons{
+    @include row-center;
+    a{
+        @include row-center;
+        min-width: 30px;
+        min-height: 30px;
+        border-radius: 5px;
+        background-color: #f1f1f1;
+        margin-right: 10px;
+        box-shadow: 0 0 5px var(--black-4);
+        &:last-child{
+            margin-right: 0;
+        }
+        &:hover{
+            transform: scale(1.2);
+        }
+    }
+}
