--- a/src/scss/mixin.scss
+++ b/src/scss/mixin.scss
@@ -53,6 +53,18 @@
     justify-content: center;
     align-items: center;
 }
+@mixin column-start{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+@mixin column-end{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
 @mixin column-justify-start{
     display: flex;
     flex-direction: column;
@@ -77,6 +89,7 @@
     justify-content: center;
     align-items: flex-end;
 }
+
 @mixin column-between{
     display: flex;
     flex-direction: column;
