--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -6,5 +6,6 @@
 @import 'animation.scss';
 
 
+@import '../components/toolbar/toolbar.scss';
 @import '../components/header/scss/header.scss';
 @import '../components/footer/footer.scss';
