--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -4,8 +4,11 @@
 @import 'theme.scss';
 @import 'swiper-slider.scss';
 @import 'animation.scss';
+@import 'general-components.scss';
 
 
 @import '../components/toolbar/toolbar.scss';
 @import '../components/header/scss/header.scss';
 @import '../components/footer/footer.scss';
+
+@import '../components/product/product-section.scss';
