--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -8,6 +8,8 @@
     --border-theme-color: var(--black-1);
     --box-shadow-theme-color: var(--black-2);
     --footer-link-theme-color: #212121;
+    --root-link-color: #212121;
+    --filter-button-color: #efefef;
     background-color: var(--bg-general-theme-color);
     color: var(--text-general-theme-color);
 
@@ -21,6 +23,8 @@
         --border-theme-color: var(--white-2);
         --box-shadow-theme-color: var(--white-3);
         --footer-link-theme-color: #fff;
+        --root-link-color: #fff;
+        --filter-button-color: var(--black-6);
 
 
 
