TextTranslate component completed

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -66,6 +66,9 @@ footer{
     footer{
         .footer-links{
             align-items: flex-start;
+            a{
+                text-align: start;
+            }
         }
     }
 }
