product card completed

--- a/src/components/header/scss/components/category-mobile.scss
+++ b/src/components/header/scss/components/category-mobile.scss
@@ -87,6 +87,7 @@ section.products {
             }
             .subcategories,
             .altcategories{
+                background-color: var(--bg-general-theme-color);
                 position: absolute;
                 top: 0;
                 left: 100%;
