--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -13,6 +13,7 @@
     --category-button-color: #efefef;
     --catalog-subpanel-bg-color: #efefef;
     --catalog-note-bg: #f7f7f7;
+    --card-text-color: #212121;
     
     
     background-color: var(--bg-general-theme-color);
@@ -33,6 +34,7 @@
         --category-button-color: var(--black-6);
         --catalog-subpanel-bg-color: var(--black-6);
         --catalog-note-bg: var(--black-4);
+        --card-text-color: #fff;
 
 
     }
