left product parametr filters completed

--- a/src/components/product/scss/product-card.scss
+++ b/src/components/product/scss/product-card.scss
@@ -244,6 +244,8 @@
                 @include row-justify-start;
                 min-width: 400px;
                 max-width: 400px;
+                font-size: 15px;
+                margin-right: 10px;
             }
         }
 
