--- a/src/scss/general-components.scss
+++ b/src/scss/general-components.scss
@@ -3,7 +3,7 @@
     @include column-align-start;
     padding: 10px 0;
     border-bottom: 1px solid var(--border-theme-color);
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     .root-links{
         @include row-justify-start;
         margin-bottom: 15px;
@@ -22,6 +22,20 @@
             }
         }
     }
+    &.secondary{
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-end;
+        .remove-products-button{
+            cursor: pointer;
+            @include row-center;
+            margin-bottom: 15px;
+            font-weight: 600;
+            img{
+                margin-right: 7px;
+            }
+        }
+    }
 }
 
 .section-title{
@@ -30,3 +44,32 @@
 }
 
 
+.category-buttons-row {
+    width: 100%;
+    @include row-justify-start;
+    padding: 15px 0;
+    margin-bottom: 20px;
+    overflow: auto;
+
+    button {
+        min-width: 150px;
+        padding: 10px 20px;
+        background-color: var(--category-button-color);
+        color: var(--text-general-theme-color);
+        border-radius: 10px;
+        margin-right: 15px;
+        text-transform: capitalize;
+        font-weight: 600;
+        //white-space: nowrap;
+
+        &:hover {
+            background-color: var(--color-1);
+            color: var(--color-5);
+        }
+
+        &.active {
+            background-color: var(--color-1);
+            color: var(--color-5);
+        }
+    }
+}
