--- a/src/components/product/scss/product-card.scss
+++ b/src/components/product/scss/product-card.scss
@@ -156,7 +156,8 @@
             @include row-between;
         }
         .compare-button{
-            width: 75%;
+            width: 100%;
+            margin-right: 10px;
             border: 1px solid var(--border-theme-color);
             img{
                 &.white{
