product catalog modal completed

--- a/src/components/catalog/catalog.scss
+++ b/src/components/catalog/catalog.scss
@@ -1,6 +1,7 @@
 @import 'scss/accordion.scss';
 @import 'scss/color-button-layout.scss';
 @import 'scss/color-button.scss';
+@import 'scss/catalog-modal.scss';
 
 
 .catalog-note{
