--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -12,4 +12,5 @@
 @import '../components/footer/footer.scss';
 
 @import '../components/product/scss/product-section.scss';
+@import '../components/product/scss/product-detail-row.scss';
 @import '../components/catalog/catalog.scss';
