--- a/src/scss/swiper-slider.scss
+++ b/src/scss/swiper-slider.scss
@@ -9,27 +9,32 @@
 
 
 
-.slick-slider{
+.slick-slider {
     width: 100%;
     padding-bottom: 50px;
     overflow: hidden;
-    .slick-track{
+
+    .slick-track {
         margin: 0;
-        
+
     }
-    .slick-dots{
+
+    .slick-dots {
         bottom: 0;
-        li{
+
+        li {
             margin: 0 1px;
-            &.slick-active{
-                button{
-                    &::before{
+
+            &.slick-active {
+                button {
+                    &::before {
                         background-color: var(--color-1);
                     }
                 }
             }
-            button{
-                &::before{
+
+            button {
+                &::before {
                     width: 10px;
                     height: 10px;
                     opacity: 1;
@@ -40,26 +45,39 @@
             }
         }
     }
-    .custom-slick-arrow{
-        
+
+    .custom-slick-arrow {
+
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
         z-index: 999;
-        width: 25px;
-        height: 25px;
-        background-color: var(--color-2);
-        border-radius: 50%;
-        color: #fff;
-        font-size: 12px;
-        &:hover{
-            background-color: var(--color-1);
-        }
-        &.prev{
+
+        &.prev {
             left: 10px;
         }
-        &.next{
+
+        &.next {
             right: 10px;
         }
+    }
+}
+
+.swiper {
+    z-index: 1;
+    .swiper-button-next,
+    .swiper-button-prev {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        z-index: 999;
+    }
+
+    .swiper-button-prev {
+        left: 10px;
+    }
+
+    .swiper-button-next {
+        right: 10px;
     }
 }
