--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -14,8 +14,9 @@
     --catalog-subpanel-bg-color: #efefef;
     --catalog-note-bg: #f7f7f7;
     --card-text-color: #212121;
-    
-    
+    --modal-bg-color: #fff;
+
+
     background-color: var(--bg-general-theme-color);
     color: var(--text-general-theme-color);
 
@@ -35,6 +36,8 @@
         --catalog-subpanel-bg-color: var(--black-6);
         --catalog-note-bg: var(--black-4);
         --card-text-color: #fff;
+        --modal-bg-color: #000;
+
 
 
     }
