--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -15,6 +15,7 @@
     --catalog-note-bg: #f7f7f7;
     --card-text-color: #212121;
     --modal-bg-color: #fff;
+    --counter-theme-bg: #efefef;
 
 
     background-color: var(--bg-general-theme-color);
@@ -37,6 +38,7 @@
         --catalog-note-bg: var(--black-4);
         --card-text-color: #fff;
         --modal-bg-color: #000;
+        --counter-theme-bg: var(--black-6);
 
 
 
